--- a/css/sunroom.webflow.css
+++ b/css/sunroom.webflow.css
@@ -385,6 +385,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  margin-bottom: 40px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -437,6 +438,47 @@ a {
   font-weight: 400;
   text-align: center;
   letter-spacing: 0px;
+}
+
+.social-link {
+  margin-right: 4px;
+  margin-left: 4px;
+  padding: 4px;
+  font-family: Roboto, sans-serif;
+  color: #ee4323;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 500;
+}
+
+.div-block-9 {
+  display: block;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
+}
+
+.heading {
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+}
+
+.div-block-11 {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 991px) {
@@ -541,6 +583,32 @@ a {
 
   .text-block-2-copy {
     width: auto;
+  }
+
+  .social-link {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+
+  .heading {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .div-block-10 {
+    margin-bottom: 24px;
+  }
+
+  .div-block-11 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 }
 
